# MOEX-ALGO

./: .env  .gitignore  .pre-commit-config.yaml  MOEX_ALGO.postman_collection.json  Makefile  README.md  database.yaml  database_backup.sh  docker-compose.yaml  logging.yaml  pg_backup.sh  pyproject.toml  pytest.ini  requirements.txt  settings.py  setup.cfg  setup.sh  talib.sh
API/: app.py  main.py
BackTester/: Backtester.py  test.py
Clustering/: ClusteringTickers.py  cached_clustering_tickers.json  test.py
Database/: alembic.ini  session.py  test_chats_dal.py
Exceptions/: BinanceSpotFiatException.py  BinanceSpotMarginException.py  BinanceSpotMarketException.py  BinanceSpotPayException.py  BinanceSpotTradeException.py  BinanceSpotWalletException.py  MOEXAlogPackExceptions.py  TaLibBaseException.py  __init__.py
Exchanges/: ExchangesInterface.py
ML/: BagOfWords.py
Research/: BackTester_binance_futures.ipynb  UploadChatsDataset.py  chats_with_rating.json  triangular_arbitrage_searcher_ _intra_exchange_trading.ipynb
Scrapping/: MainLayer.py  RBCInvest.py  Telegram.py  TelegramUserAgent.py  WebParser.py  test.py
SentimentClassifier/: SentimentClassifier.py
Strategy/: StrategyTester.py
TaLib/: TAInterface.py  test.py
Test/: test_BinanceSpotMarket.py  test_MomentumIndicators.py  test_ServerConf.py  test_TG_UserAgent.py  test_chats_dal.py  test_moex_algopack.py  test_rbc_parser.py  test_web_dal.py
WebUI/: package-lock.json  package.json
complicat9d/: main.py  test.py
ml/: chats_with_rating.json  finbertAPI.py  main.py  output.json  rbc.json
(+81 files in other folders)
