[tool.poetry]
name = "crypto-ta"
version = "0.1.0"
description = "Service for tech analysis cryptocurrency and trading strategies testing + Binance API"
authors = ["Ivan Bogomolov <qhomop@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
packages = [{include = "crypto_ta"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
binance = "^0.3"
binance-connector = "^2.0.0"
logging = "^0.4.9.6"
pyyaml = "^6.0"
pandas = "^1.5.3"
redis = "^4.5.4"
coloredlogs = "^15.0.1"
yfinance = "^0.2.14"
pytest = "^7.2.2"
pre-commit = "^3.2.2"
matplotlib = "^3.7.1"
envparse = "^0.2.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.8"
alembic = "^1.10.2"
psycopg2 = "^2.9.6"
pydantic = {extras = ["email"], version = "^1.10.7"}
asyncpg = "^0.27.0"
schedule = "^1.2.0"
pylint = "^2.17.3"
ta-lib = "^0.4.26"
binance-futures-connector = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
